[Simon] Add Gradle conventions file