@@ -1,9 +1,5 @@
 plugins {
-    id("java")
-}
-
-repositories {
-    mavenCentral()
+    id("java-conventions")
 }
 
 dependencies {
@@ -12,11 +8,4 @@ dependencies {
 
     implementation(project(":gennaker-annotations"))
     implementation(project(":gennaker-core"))
-}
-
-tasks.withType<JavaExec> {
-    jvmArgs("--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED")
-}
-tasks.withType<Test> {
-    jvmArgs("--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED")
 }
